# thesis_robot_bku

./: make.sh  nav_rotate.sh  run_fake.sh  run_gazebo.sh  usb-cdc.rules
thesis_robot/: CMakeLists.txt  package.xml
thesis_robot/launch/: thesis_robot_gazebo_world.launch  thesis_robot_model.launch
thesis_robot/src/: nav_timed.py
thesis_robot/urdf/: materials.xacro  thesis_robot.gazebo.xacro  thesis_robot.urdf.xacro
thesis_robot_fake/: CMakeLists.txt  package.xml
thesis_robot_fake/include/thesis_robot_fake/: thesis_robot_fake.h
thesis_robot_fake/launch/: thesis_robot_fake.launch
thesis_robot_fake/rviz/: thesis_robot_fake.rviz
thesis_robot_fake/src/: thesis_robot_fake.cpp
